@@ -43,7 +43,9 @@
 		<%#
 			$this->Parent->DataItem->Status===0 ?
 				'Published' :
-				($this->Parent->DataItem->Status===1 ? 'Draft' : 'Pending')
+				($this->Parent->DataItem->Status===1 ?
+					'Draft' :
+					($this->Parent->DataItem->Status===2 ? 'Pending' : 'Sticky'))
 		%>
 		</prop:ItemTemplate>
 		<prop:EditItemTemplate>
@@ -51,13 +53,14 @@
 			<com:TListItem Value="0" Text="Published" />
 			<com:TListItem Value="1" Text="Draft" />
 			<com:TListItem Value="2" Text="Pending" />
+			<com:TListItem Value="3" Text="Sticky" />
 		</com:TDropDownList>
 		</prop:EditItemTemplate>
 	</com:TTemplateColumn>
 	<com:TBoundColumn
 		HeaderText="Time"
 		ReadOnly="true"
-		DataField="CreateTime"
+		DataField="ModifyTime"
 		DataFormatString="#date('M j, Y',{0})"
 		ItemStyle.Wrap="false"
 		ItemStyle.Width="90px"
